@@ -69,7 +69,7 @@
 	(DBD_OCI_TRACEON) \
    ?  PerlIO_printf(DBD_OCI_TRACEFP,\
          "%sNlsEnvCreate(%p,%d,%d,%p,%p,%p,%d,%p,%d,%d)=%s\n", \
-         OciTp, (void*)envp, mode, ctxp, f1, f2, f3, sz, usremepp ,chset, nchset, oci_status_name(stat)),stat \
+         OciTp, (void*)envp, mode, ctxp, (void*)f1, (void*)f2, (void*)f3, sz, (void*)usremepp ,chset, nchset, oci_status_name(stat)),stat \
    : stat
 
 
